changes in html

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <body>
     <div class="card">
         <h2>Glassmorphic Card</h2>
-        <p>This is a trendy UI component with a glass effect and smooth animations.</p>
+        <p>This is a UI component with a glass effect and smooth animations.</p>
     </div>
 </body>
 </html>
