changes in html

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             backdrop-filter: blur(10px);
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
             padding: 20px;
+            margin: 40px;
             text-align: center;
             color: white;
             transition: transform 0.3s;
@@ -40,7 +41,11 @@
 <body>
     <div class="card">
         <h2>Glassmorphic Card</h2>
-        <p>This is a UI component with a glass effect and smooth animations.</p>
+        <p>This is a UI component with a glass effect and smooth animation.</p>
+    </div>
+    <div class="card">
+        <h2>Glassmorphic Card</h2>
+        <p>This is a UI component with a glass effect and smooth animation.</p>
     </div>
 </body>
 </html>
